--- a/views/login.ejs
+++ b/views/login.ejs
@@ -24,7 +24,7 @@
       <label for="pwd">Password:</label>
       <input type="password" class="form-control" id="password">
     </div>
-  <button type="button" class="btn btn-success" id ="btn">Success</button>
+  <button type="button" class="btn btn-success" id ="btn">Login</button>
 </div>
 
 </body>
@@ -57,10 +57,10 @@ $(document).ready(function() {
           }
           else{  //alert(result);
           new PNotify({
-        title: 'Login Notice',
-        text: result,
-        type : 'error',
-        icon : 'fa fa-envelope-o'
+        title : 'Login Notice',
+        text  : result,
+        type  : 'error',
+        icon  : 'fa fa-envelope-o'
 
     });
           }
