--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -11,7 +11,7 @@
 <div class="container">
   <h2>Form control: input</h2>
   <p>The form below contains two input elements; one of type text and one of type password:</p>
-  
+
     <div class="form-group">
       <label for="usr">First Name:</label>
       <input type="text" class="form-control" id="firstname">
@@ -24,11 +24,15 @@
       <label for="usr">Email ID:</label>
       <input type="text" class="form-control" id="emailid">
     </div>
+      <div class="form-group">
+      <label for="usr">Phone:</label>
+      <input type="text" class="form-control" id="phone">
+    </div>
     <div class="form-group">
       <label for="pwd">Password:</label>
       <input type="password" class="form-control" id="password">
     </div>
-  <button type="button" class="btn btn-success" id ="btn">Success</button>
+  <button type="button" class="btn btn-success" id ="btn">submit</button>
 </div>
 
 </body>
@@ -42,18 +46,25 @@ $(document).ready(function() {
               first : $("#firstname").val(),
               last  : $("#lastname").val()
             },
+            phone :$("#phone").val(),
             email : $("#emailid").val(),
             password : $("#password").val()
-          };          
+          };
       console.log(data);
         $.ajax({
         type:"POST",
         url:"/admin_function",
-        data :  data, 
+        data :  data,
         //dataType: 'json',  // multiple data sent using ajax
         success: function (result) {
-           alert(result);
-          
+          if(result.status==200){
+            alert(result.data);
+            window.location='/'
+          }
+          else{
+            alert("invalid data");
+          }
+
         }
         });
     });
