--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -24,12 +24,12 @@
       <label for="usr">Email ID:</label>
       <input type="text" class="form-control" id="emailid">
     </div>
-      <div class="form-group">
+      <!-- <div class="form-group">
       <label for="usr">Phone:</label>
       <input type="text" class="form-control" id="phone">
-    </div>
+    </div> -->
     <div class="form-group">
-      <label for="pwd">Password:</label>
+      <label for="pwd">Pass phrase:</label>
       <input type="password" class="form-control" id="password">
     </div>
   <button type="button" class="btn btn-success" id ="btn">submit</button>
@@ -46,7 +46,7 @@ $(document).ready(function() {
               first : $("#firstname").val(),
               last  : $("#lastname").val()
             },
-            phone :$("#phone").val(),
+            // phone :$("#phone").val(),
             email : $("#emailid").val(),
             password : $("#password").val()
           };
